--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,323 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# ============================================
+# ZIONYX TERMINAL - GIT IGNORE CONFIGURATION
+# ============================================
+# Professional-grade exclusion rules for
+# institutional trading platform development
+# ============================================
 
-# dependencies
+# ==========================================
+# DEPENDENCIES & PACKAGE MANAGERS
+# ==========================================
+
+# Node modules
 /node_modules
 /.pnp
 .pnp.js
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 .yarn/install-state.gz
 
-# testing
-/coverage
+# Package manager locks (keep one, ignore others)
+# Uncomment the lock file you DON'T use:
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
 
-# next.js
+# ==========================================
+# NEXT.JS BUILD OUTPUT
+# ==========================================
+
+# Production builds
 /.next/
 /out/
-
-# production
 /build
+/dist
 
-# misc
-.DS_Store
+# Next.js cache
+.next/cache
+
+# Static export
+/public/sw.js
+/public/workbox-*.js
+/public/worker-*.js
+/public/fallback-*.js
+
+# ==========================================
+# ENVIRONMENT & SECRETS
+# ==========================================
+
+# Environment files
+.env
+.env*.local
+.env.development
+.env.production
+.env.test
+.env.backup
+
+# API keys and secrets
+secrets.json
+.secrets
+*.key
 *.pem
+*.p12
+*.pfx
 
-# debug
+# ==========================================
+# DATABASE & PRISMA
+# ==========================================
+
+# Prisma
+/prisma/*.db
+/prisma/*.db-journal
+/prisma/migrations/*_backup
+/prisma/dev.db*
+
+# Database dumps
+*.sql
+*.dump
+*.backup
+/backups/
+
+# PostgreSQL
+/postgres-data/
+/pgdata/
+
+# SQLite
+*.sqlite
+*.sqlite3
+*.db
+
+# ==========================================
+# LOGS & DEBUGGING
+# ==========================================
+
+# Log files
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# local env files
-.env*.local
+# Runtime logs
+/logs
+*.log.*
 
-# vercel
-.vercel
+# Debug
+.vscode/launch.json
+.idea/workspace.xml
 
-# typescript
+# ==========================================
+# TESTING & COVERAGE
+# ==========================================
+
+# Test coverage
+/coverage
+/.nyc_output
+/test-results/
+/playwright-report/
+/playwright/.cache/
+
+# Jest
+/jest-cache/
+
+# ==========================================
+# TYPESCRIPT
+# ==========================================
+
 *.tsbuildinfo
 next-env.d.ts
+tsconfig.tsbuildinfo
+
+# Type checking cache
+.tsc-cache/
+
+# ==========================================
+# OPERATING SYSTEM FILES
+# ==========================================
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.lnk
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# ==========================================
+# IDEs & EDITORS
+# ==========================================
+
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+.history/
+
+# JetBrains IDEs
+.idea/
+*.iml
+*.iws
+*.ipr
+.idea_modules/
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+Session.vim
+Sessionx.vim
+
+# ==========================================
+# DEPLOYMENT & CI/CD
+# ==========================================
+
+# Vercel
+.vercel
+.vercel.json
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# CI/CD
+.github/workflows/*.local.yml
+
+# ==========================================
+# CACHE & TEMPORARY FILES
+# ==========================================
+
+# Next.js cache
+.next/
+.swc/
+
+# Turbopack
+.turbo/
+
+# Build cache
+.cache/
+.parcel-cache/
+.webpack/
+
+# Temporary files
+*.tmp
+*.temp
+.tmp/
+.temp/
+*.swp
+*.swo
+
+# ==========================================
+# TRADING DATA & ANALYTICS
+# ==========================================
+
+# Trading logs (if stored locally)
+/trading-logs/
+/execution-logs/
+*.trade
+*.journal
+
+# Exported reports
+/exports/
+/reports/*.csv
+/reports/*.xlsx
+/reports/*.pdf
+
+# Analytics cache
+/analytics-cache/
+.analytics/
+
+# ==========================================
+# SECURITY & COMPLIANCE
+# ==========================================
+
+# Certificate files
+*.crt
+*.cer
+*.ca-bundle
+*.p7b
+*.p7s
+
+# SSH keys
+id_rsa
+id_rsa.pub
+id_dsa
+id_dsa.pub
+*.ppk
+
+# AWS credentials
+.aws/
+
+# ==========================================
+# MISCELLANEOUS
+# ==========================================
+
+# Storybook
+storybook-static/
+.storybook/public/
+
+# Documentation builds
+/docs/.vitepress/cache
+/docs/.vitepress/dist
+
+# Changelog drafts
+CHANGELOG.draft.md
+
+# Local configuration
+*.local
+.local/
+
+# Benchmark results
+benchmark-results/
+
+# Generated files
+generated/
+auto-generated/
+
+# ==========================================
+# PROJECT-SPECIFIC EXCLUSIONS
+# ==========================================
+
+# Add project-specific ignores below:
+# /custom-scripts/temp/
+# /experimental/
+
+# ==========================================
+# END OF GITIGNORE
+# ==========================================
